<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="zalosdk_app_name"></string>
    <string name="zalosdk_peter_pan">Peter Pan</string>
    <string name="zalosdk_activity_payment">PaymentActivity</string>
    <string name="zalosdk_payment_choosing">Chọn hình thức thanh toán</string>
    <string name="zalosdk_zingcard">Thẻ cào Zing</string>
    <string name="zalosdk_mobile_card">Thẻ cào điện thoại</string>
    <string name="zalosdk_mobileacc">Tài khoản điện thoại</string>
    <string name="zalosdk_atmacc">Tài khoản ATM nội địa</string>
    <string name="zalosdk_hotline">"Hotline: "</string>
    <string name="zalosdk_1900_561_558">1900 561 558</string>
    <string name="zalosdk_zalo_acc">Tài khoản ví Zalo</string>
    <string name="title_activity_zing_card">ZingCardActivity</string>
    <string name="zalosdk_billno">Mã đơn hàng</string>
    <string name="zalosdk_lk_mbc48374652">lk_MBC48374652</string>
    <string name="zalosdk_billinfo">Thông tin đơn hàng</string>
    <string name="zalosdk_billdes">Nạp điểm cho tài khoản Peter Pan</string>
    <string name="zalosdk_provider_info">Thông tin nhà cung cấp</string>
    <string name="zalosdk_provider_name">Happy Dice (VNG Corp)</string>
    <string name="zalosdk_cardcode">Mật mã của thẻ</string>
    <string name="zalosdk_cardseri">Số seri</string>
    <string name="zalosdk_card_info">Thông tin thẻ</string>
    <string name="zalosdk_ok">Đồng ý</string>
    <string name="zalosdk_mobi">mobi</string>
    <string name="zalosdk_vina">vina</string>
    <string name="zalosdk_viettel">viettel</string>
    <string name="zalosdk_price_choosing">Mức giá</string>
    <string name="zalosdk_pay">Thanh toán</string>    
    <string name="zalosdk_15_000">15.000</string>
    <string name="zalosdk_15_000_d">15.000 đ</string>
    <string name="zalosdk_coin_unit"><u>đ</u></string>
    <string name="zalosdk_user_phone">Thông tin thuê bao điện thoại</string>
    <string name="zalosdk_phone_number">Số điện thoại</string>
    <string name="zalosdk_processing">Đang xử lý</string>
    <string name="zalosdk_success">Thành công</string>
   	<string name="zalosdk_unsuccess">Thất bại</string>
   	<string name="zalosdk_notification">Thông báo</string>
   	<string name="zalosdk_close">Đóng</string>
   	<string name="zalosdk_otp">Mã xác nhận</string>
   	<string name="zalosdk_otp_note">"Tin nhắn chứa mã xác nhận đã được gửi đến số điện thoại "</string>
   	<string name="zalosdk_otp_note_atm">"Tin nhắn chứa mã xác nhận đã được gửi đi "</string>
   	<string name="zalosdk_pay_info">Thông tin thanh toán</string>
   	<string name="zalosdk_pay_amount">Số tiền cần nạp</string>
   	<string name="zalosdk_select_bank">Chọn ngân hàng</string>
   	<string name="zalosdk_atm_card_holder_name">Tên chủ thẻ</string>
   	<string name="zalosdk_atm_vcb_acc_name">Tên truy cập VCB-iB@nking</string>
   	<string name="zalosdk_atm_vcb_acc_name_ex">VD: 7111000A00</string>
   	<string name="zalosdk_atm_vcb_acc_password">Mật khẩu VCB-iB@nking</string>   	
   	<string name="zalosdk_atm_card_holder_name_ex">VD: Nguyen Van A</string>
   	<string name="zalosdk_atm_card_code">Mã số thẻ</string>
   	<string name="zalosdk_atm_card_ex">VD: 9704000000000000</string>
   	<string name="zalosdk_atm_card_publish_date">Ngày phát hành:</string>
   	<string name="zalosdk_card_password">Mật mã thẻ</string>
   	<string name="zalosdk_card_password_ex">******</string>
   	<string name="zalosdk_captchar_inputing">Nhập chuỗi kí tự bảo mật bên trên</string>
   	<string name="zalosdk_slash">/</string>
   	<string name="zalosdk_month">tháng</string>
   	<string name="zalosdk_year">năm</string>
</resources>
